--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Blog</title>
-</head>
-<body>
-    <h1>안녕하세요! 첫 번째 기술 블로그입니다. 🚀</h1>
-    <p>이 페이지는 GitHub Pages로 호스팅됩니다.</p>
-</body>
-</html>
+---
+layout: default
+title: Home
+---
+
+# 💻🐉 Java Study Blog
+
+클라우드 컴퓨팅 이론과 실습 정리용 기술 블로그
+
+---
+
+## 📚 글 목록
+
+- [Week01: 클라우드 개요](Week01_Cloud_Basics.md)  
+- [Week02: 서비스 모델 (IaaS/PaaS/SaaS)](Week02_Cloud_Service_Models.md)  
+<!-- 여기에 앞으로 작성할 주차별 파일 링크를 추가해 주세요 -->
