--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@ title: Home
 
 ## 📚 글 목록
 
-- [Week01: 클라우드 개요](Week01_Cloud_Basics.md)  
-- [Week02: 서비스 모델 (IaaS/PaaS/SaaS)](Week02_Cloud_Service_Models.md)  
-<!-- 여기에 앞으로 작성할 주차별 파일 링크를 추가해 주세요 -->
+- [Week 1: 변수와 타입](./Week01_variables.md)
+- [Week 2: 연산자](./Week01_operators.md)
+- [Week 3: 조건문과 반복문](./Week02_condition_loop.md)
+- [Week 4: 참조 타입과 참조 변수](./Week02_reference_type.md)
+- [Week 5: 클래스와 객체](./Week03_Class_and_Object.md)
+- [Week 6: 참조 타입과 배열](./Week03_Reference_Type_and_Array.md)
+- [Week 7: 클래스](./Week04.Class.md)
+- [Week 8: 상속](./Week05.inheritance.md)
+- [Week 9: 인터페이스](./Week08.Interface.md)
+- [Week 10: 중첩클래스](./Week09.NestedClasses.md)
+- [Week 11: 예외처리](./Week10.ExceptionHandling.md)
